libquantumida/c0/quantum_frac_approx
classic.c:552:14: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( float *)v3.m128i_i32 = g - ( ( double)i - 0.000005); 
           ~~^~~~~~~~~~
classic.c:553:18: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v3 = ( __m128i)v3.m128i_u32[0]; 
               ~~^~~~~~~~~~
classic.c:554:25: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v4 = 1.0 / *( float *)v3.m128i_i32; 
                      ~~^~~~~~~~~~
classic.c:564:15: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( double *)v3.m128i_i64 = ( double)num / ( double)den - ( float)( ( float)*a / ( float)*b); 
            ~~^~~~~~~~~~
classic.c:566:50: error: use of undeclared identifier 'xmmword_40B9D0'
while ( *( double *)_mm_and_si128( v3, ( __m128i)xmmword_40B9D0).m128i_i64 > 1.0 / ( double)( 2 * ( 1 << width)) ); 
                                                 ^
5 errors generated.
gates.c:365:7: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
             (reg->size + addsize) * sizeof(char));
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
gates.c:543:7: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
             (reg->size + addsize) * sizeof(char));
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2 warnings generated.
objcode.c:176:18: warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
  va_start(args, operation);
                 ^
objcode.c:165:35: note: parameter of type 'unsigned char' is declared here
quantum_objcode_put(unsigned char operation, ...)
                                  ^
1 warning generated.
